# AI-Textbook

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  PROFESSIONAL_WEBSITE_SUMMARY.md  README.md  mkdocs.yml  package-lock.json  requirements-docs.txt  requirements.txt  vercel.json
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: requirements-prod.txt  requirements.txt  vercel_api.py
enhanced-educational-platform/: docusaurus.config.js  package.json  sidebars.js
enhanced-educational-platform/docs/: intro.md
enhanced-educational-platform/docs/authentication/: setup.md
frontend/: docusaurus.config.ts
my-book/: docusaurus.config.ts  package-lock.json  package.json
my-book/blog/: 2025-01-01-introducing-humanoid-robotics-course.md  2025-01-02-technology-stack-insights.md  2025-01-03-capstone-project-overview.md
ros2_ws/src/humanoid_simulation/: package.xml
ros2_ws/src/humanoid_simulation/launch/: simulation.launch.py
ros2_ws/src/humanoid_simulation/worlds/: humanoid_world.world
specs/: README.md
specs/001-docusaurus-chatbot-frontend/: spec.md
specs/001-humanoid-robotics-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-ingestion-pipeline/: IMPLEMENTATION_SUMMARY.md  plan.md  spec.md  tasks.md
specs/003-rag-query-processing/: plan.md  spec.md
specs/004-user-interaction-features/: plan.md  spec.md
specs/005-advanced-rag-optimization/: plan.md  spec.md
unified-site/: .env.example  docusaurus.config.js
unified-site/backend/: requirements.txt
(+103 files in other folders)
